Closed Bug 731927 Opened 12 years ago Closed 12 years ago

IonMonkey: testContinueWithLabel4.js fails

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(1 file)

Assertion failure: found, at ../../../js/src/ion/IonBuilder.cpp:1478
Attached patch fixSplinter Review
for-in loops with continue look like:

   ITER
y: GOTO x
   GOTO y     ;continue
x: LOOPENTRY
   MOREITER
   IFNE
   ENDITER

So, a quick fix is to sniff the continuepc to see if it's actually a goto.
Assignee: general → dvander
Status: NEW → ASSIGNED
Attachment #602240 - Flags: review?
Attachment #602240 - Flags: review? → review?(jdemooij)
Attachment #602240 - Flags: review?(jdemooij) → review+
http://hg.mozilla.org/projects/ionmonkey/rev/f43cef7074c5
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: