Fix continue in for-in loops (bug 731927, r=jandem).